force-app/main/default/objects/SiebelMsgNotifica__x/SiebelMsgNotifica__x.object-meta.xml
<CustomObject>
    <description>SiebelMsgNotifica</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelMsgNotifica</externalName>
    <label>Alert tracking</label>
    <pluralLabel>Alerts tracking</pluralLabel>
</CustomObject>