force-app/main/default/objects/SiebelMsgNotifica__x/fields/DATA_INVIO__c.field-meta.xml
<CustomField>
    <fullName>DATA_INVIO__c</fullName>
    <description>DATA_INVIO</description>
    <externalDeveloperName>DATA_INVIO</externalDeveloperName>
    <label>Data invio</label>
    <type>Date</type>
</CustomField>