force-app/main/default/objects/SiebelMsgNotifica__x/fields/EVENTO__c.field-meta.xml
<CustomField>
    <fullName>EVENTO__c</fullName>
    <description>EVENTO</description>
    <externalDeveloperName>EVENTO</externalDeveloperName>
    <label>Evento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>