force-app/main/default/objects/SiebelMsgNotifica__x/fields/ID_BP__c.field-meta.xml
<CustomField>
    <fullName>ID_BP__c</fullName>
    <description>ID_BP</description>
    <externalDeveloperName>ID_BP</externalDeveloperName>
    <label>Reference Cliente Archivio</label>
    <length>15</length>
    <referenceTo>SiebelCustomer__x</referenceTo>
    <relationshipLabel>Alerts tracking</relationshipLabel>
    <relationshipName>Alerts_tracking</relationshipName>
    <type>ExternalLookup</type>
</CustomField>