force-app/main/default/objects/SiebelMsgNotifica__x/fields/ID_BP_SALESFORCE__c.field-meta.xml
<CustomField>
    <fullName>ID_BP_SALESFORCE__c</fullName>
    <label>Reference Cliente Online</label>
    <length>15</length>
    <referenceTargetField>Account.RowIdSiebel__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alert tracking</relationshipLabel>
    <relationshipName>Alert_tracking</relationshipName>
    <type>IndirectLookup</type>
</CustomField>