force-app/main/default/objects/SiebelMsgNotifica__x/fields/NOME_TEMPLATE__c.field-meta.xml
<CustomField>
    <fullName>NOME_TEMPLATE__c</fullName>
    <description>NOME_TEMPLATE</description>
    <externalDeveloperName>NOME_TEMPLATE</externalDeveloperName>
    <label>Nome template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>