force-app/main/default/objects/SiebelMsgNotifica__x/fields/PORTALE_SOL__c.field-meta.xml
<CustomField>
    <fullName>PORTALE_SOL__c</fullName>
    <description>PORTALE_SOL</description>
    <externalDeveloperName>PORTALE_SOL</externalDeveloperName>
    <label>Portale SOL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>