force-app/main/default/objects/SiebelMsgNotifica__x/fields/RECAPITO__c.field-meta.xml
<CustomField>
    <fullName>RECAPITO__c</fullName>
    <description>RECAPITO</description>
    <externalDeveloperName>RECAPITO</externalDeveloperName>
    <label>Recapito</label>
    <length>50</length>
    <type>Text</type>
</CustomField>