force-app/main/default/objects/SiebelMsgNotifica__x/fields/REGOLA__c.field-meta.xml
<CustomField>
    <fullName>REGOLA__c</fullName>
    <label>Regola</label>
    <length>50</length>
    <type>Text</type>
</CustomField>