force-app/main/default/objects/SiebelMsgNotifica__x/fields/STATO_NOTIFICA__c.field-meta.xml
<CustomField>
    <fullName>STATO_NOTIFICA__c</fullName>
    <description>STATO_NOTIFICA</description>
    <externalDeveloperName>STATO_NOTIFICA</externalDeveloperName>
    <label>Stato notifica</label>
    <length>30</length>
    <type>Text</type>
</CustomField>