force-app/main/default/objects/SiebelMsgNotifica__x/fields/TESTO_MSG__c.field-meta.xml
<CustomField>
    <fullName>TESTO_MSG__c</fullName>
    <description>TESTO_MSG</description>
    <externalDeveloperName>TESTO_MSG</externalDeveloperName>
    <label>Testo messaggio</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>