force-app/main/default/objects/SiebelMsgNotifica__x/fields/TOTALE_PAPERLESS__c.field-meta.xml
<CustomField>
    <fullName>TOTALE_PAPERLESS__c</fullName>
    <description>TOTALE_PAPERLESS</description>
    <externalDeveloperName>TOTALE_PAPERLESS</externalDeveloperName>
    <label>Totale paperless</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>